# pinball

./: Cargo.toml  README.md  index.html  package-lock.json  package.json
.netlify/: state.json
assets/: manifest.webmanifest  smartball-de-bon-icon.ai  smartball-de-bon.ai
src/: main.rs
src/pages/: game.rs  home.rs  mod.rs
src/pinball/: game.rs  renderer.rs
