[package]
name = "pinball"
version = "0.1.0"
edition = "2018"


[dependencies]
log = "0.4"
yew = { git = "https://github.com/yewstack/yew"}
yew-router = { git = "https://github.com/yewstack/yew"}
wasm-bindgen = "0.2.74"
wasm-logger = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'MouseEvent',
  'TouchEvent',
  'Window',
]
